assets/css/style.css
:root {
    --light-green: #63cdda;
    --charcoal: #2f3640;
    --grey: #576574;
    --section-padding: 40px;
    --work-section-padding: 10px;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }

body {
    font-family: 'Open Sans' 'Roboto Slab';
}

/* header section */
header {
    background-color: var(--charcoal);
    padding-top: 20px ;
    padding-bottom: 20px;
    padding-right: 20px;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
    position: sticky;
    position: -webkit-sticky;
    top: 0;
    background-position: 80%;
    margin: 0px;
    z-index: 99999;
}

header h1 {
    color: var(--charcoal);
    background-color: var(--light-green);
    text-align: left;
    padding: 4px 10px 4px 30px;
    font-weight: bold;
    margin: 0px;
    font-size: 36px;
    right: 600px
}

header a {
    color: var(--light-green);
}

header nav {
    margin: 8px 0px;
}

header nav ul {
    display: flex;
    justify-content: space-between;
    flex-wrap:  wrap;
    list-style: none;
    align-items: center;
}

header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.2vw;
    text-underline-position: under;
    text-underline-offset: 5px;
    text-decoration-thickness: 3px;
    /*border-bottom: 2px solid var(--light-green);*/
}

/* hero section */
.hero {
    background-image: url('../images/hero.jpg');
    color: var(--charcoal);
    background-size: cover;
    padding: 100px;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
}

.portfolio_img{
    flex: 1 80%;
    z-index: 1;
}

.portfolio_img img{
    width: 300px;
    height: 300px;
    position: relative;
    left: 1150px;
    margin-bottom: 50px;
}

.hero-title {
   background-color: var(--light-green);
   padding: 6px;
   width: auto;
   text-align: right;
   font-size: 32px;
   position: absolute;
   right:200px;
   padding: 12px 12px;
}

.make-things {
    background-color: var(--charcoal);
    color: var(--light-green);
}

.make-difference {
    border-bottom: 6px solid;
}

/* section common */
.sections {
    margin: 30px;
    display: flex;
    justify-content: flex-start;
    color: var(--grey);
}

.section-header {
    font-size: 50px;
    padding-right: var(--section-padding);
    text-align: right;
}

.border-left {
    border-left: 4px solid;
}

.about-me {
    margin-right: 60px;
}

/* about me section */
.about-me p {
    padding-left: var(--section-padding);
    line-height: 1.8;
    font-size: 22px;
}

/* work section */
.work {
    display: flex;
    flex-wrap: wrap;
    padding-left: var(--section-padding);
}

.work-sections {
    background-color: var(--light-green);
    border: 4px solid var(--light-green);
    margin: 15px;
    color: var(--charcoal);
    position: relative;
    width: 700px;
    height: 300px;
    flex-grow: calc();
}

.work-section-title {
    font-size: 35px;
    font-weight: bold;
    padding: var(--work-section-padding);
}

.work-section-subtitle {
    font-size: 18px;
    font-weight: lighter;
    padding-left: var(--work-section-padding);
    padding-right: var(--work-section-padding);
    padding-bottom: var(--work-section-padding);
}

.surf-report {
    background-image: url('../images/SurfReport.jpg');
}

.led-wall {
    background-image: url('../images/LedWall.JPG');
}

.calculator {
    background-image: url('../images/Calculator.JPG');
}

.pastel-puzzle {
    background-image: url('../images/PastelPuzzle.JPG');
}

.run-buddy {
    background-image: url('../images/RunBuddy.JPG');
}

.work-headers {    
    background-color: var(--light-green);
    position: absolute;
    bottom: 50px;
    padding-left: 20px;
}

.contact-me {
    padding-left: var(--section-padding);
    display: flex;
    justify-content: space-between;
    margin-right: 90%;
}

.contact-me a {
    color: var(--charcoal);
    padding-right: 90px;
    padding-top: 20px ;
    font-weight:normal;
    font-size: 1.6vw;
    text-underline-position: under;
    text-underline-offset: 5px;
    text-decoration-thickness: 3px;
    margin-top: 15px;
}

